# RemoteJoyLite-MacOS

./: .gitignore  README.md  RemoteJoyLite.prx
RemoteJoyLite_sdl/: CMakeLists.txt
RemoteJoyLite_sdl/macos/: RemoteJoyLiteMac.mm
RemoteJoyLite_sdl/src/: main.c
build-macos/: CMakeCache.txt  Makefile  RemoteJoyLite-cross  cmake_install.cmake
macos/: package_app.sh
